--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ h6 {
 
 
 body{
-	background: url('../img/image.jpg') 0 0/auto 1200% no-repeat;  
+    background: url('../img/image.jpg') no-repeat center center fixed;
+    background-size: cover; 	
     font-family: Arial, sans-serif;        	
     line-height: 1;   
     color: #333333;
